@@ -92,7 +92,7 @@ typedef enum
    SLANG_BC_LOBJPTR		= 0x2A,
    SLANG_BC_GOBJPTR		= 0x2B,
    SLANG_BC_FIELD_REF		= 0x2C,
-   SLANG_BC_UNUSED_0x2D		= 0x2D,
+   SLANG_BC_DEREF_FUN_CALL	= 0x2D,
    SLANG_BC_UNUSED_0x2E		= 0x2E,
    SLANG_BC_UNUSED_0x2F		= 0x2F,
    SLANG_BC_UNUSED_0x30		= 0x30,
